# NLGHI-Core-a-small-reusable-library-for-computing-geriatric-health-index

./: CITATION.cff  LICENSE  README.md  cli.py  core.py  domains.py  io.py  paper.bib  paper.md  pyproject.toml  test_cli.py  test_core.py  visit.csv
