[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlghi"
version = "1.0.0"
description = "NLGHI Core: compute Newfoundland & Labrador Geriatric Health Index (27-domain weighted impairment)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mirza Niaz Zaman Elin" }]
requires-python = ">=3.9"
keywords = ["geriatric", "public health", "composite index", "Newfoundland and Labrador"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0"
]

[project.urls]
Homepage = "https://github.com/yourorg/nlghi"
Documentation = "https://github.com/yourorg/nlghi#readme"
Issues = "https://github.com/yourorg/nlghi/issues"

[project.scripts]
nlghi = "nlghi.cli:main"
